@@ -39,7 +39,6 @@ import unikl.disco.curves.ArrivalCurve;
 import unikl.disco.nc.Analysis;
 import unikl.disco.nc.AnalysisConfig;
 import unikl.disco.nc.ArrivalBound;
-import unikl.disco.nc.AnalysisConfig.MuxDiscipline;
 import unikl.disco.nc.operations.BacklogBound;
 import unikl.disco.nc.operations.DelayBound;
 import unikl.disco.nc.operations.LeftOverService;
@@ -48,7 +47,6 @@ import unikl.disco.network.Link;
 import unikl.disco.network.Network;
 import unikl.disco.network.Path;
 import unikl.disco.network.Server;
-import unikl.disco.network.Server.Multiplexing;
 import unikl.disco.numbers.Num;
 import unikl.disco.numbers.NumFactory;
 import unikl.disco.minplus.Convolution;
@@ -168,19 +166,8 @@ public class SeparateFlowAnalysis extends Analysis {
 				}
 				
 				// Calculate the left-over service curve for the flow of interest
-				if( configuration.multiplexingDiscipline() == MuxDiscipline.GLOBAL_FIFO
-					|| ( configuration.multiplexingDiscipline() == MuxDiscipline.SERVER_LOCAL && server.multiplexingDiscipline() == Multiplexing.FIFO ) )
-				{
-					for ( ArrivalCurve alpha_xfoi : alpha_xfois ) {
-						betas_lofoi_s.add( LeftOverService.fifoMux( beta_lofoi, alpha_xfoi ) );
-					}
-				}
-				else
-				{
-					for ( ArrivalCurve alpha_xfoi : alpha_xfois ) {
-						betas_lofoi_s.add( LeftOverService.arbMux( beta_lofoi, alpha_xfoi ) );
-					}
-				}
+				betas_lofoi_s = LeftOverService.compute( configuration, server, alpha_xfois );
+				
 				result.map__server__alphas.put( server, alpha_xfois );
 			}
 			((SeparateFlowResults) result).map__server__betas_lo.put( server, betas_lofoi_s );
