@@ -2,7 +2,8 @@ v2.3.2 "Centaur" (2017-Mar-YX)
 ------------------------------
 * Advanced the structure of the package unikl.disco.nc with subpackages for analyses, arrivalBounds and operations.
 * Improved the arrival boundings and fixed the PMOO AB's shortcut for single hop subpaths (was actually dead code before).
-* PBOO Arrival Bounding with per-hop left-over service: Use server's max SC instead of entire common path's one.
+* LeftOverService: Generic compute method dispatches according to the configuratoin's multiplexing flag. Used in SFA and PbooAB.
+* Fix: PBOO Arrival Bounding with per-hop left-over service: Use server's max SC instead of overly pessimistic entire common path's one.
 
 v2.3.1 "Centaur" (2017-Feb-28)
 ------------------------------
